Wrapped each line into rows and columns, and offset them into correct positioning.

--- a/src/main/web-app/css/index.css
+++ b/src/main/web-app/css/index.css
@@ -27,5 +27,5 @@
 }
 .linesep
 {
-	margin-top: 10px;
+	margin-top: 20px;
 }
